crates/pg_syntax/tests/snapshots/postgres_regress/multirangetypes@21.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select '{(a,)}'::textmultirange;"
---
SelectStmt@0..32
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..31
    TypeCast@7..31
      AConst@7..15
        Sconst@7..15 "'{(a,)}'"
      Typecast@15..17 "::"
      TypeName@17..31
        Ident@17..31 "textmultirange"
  Ascii59@31..32 ";"

